rough draft of new intro

--- a/Manuscripts/cog-psych/revision/citations.bib
+++ b/Manuscripts/cog-psych/revision/citations.bib
@@ -215,6 +215,36 @@
 	year = {2007}
 }
 
+@article{abbott16,
+	author = {J. T. Abbott and T. L. Griffiths and T. Reiger},
+	title = {Focal colors across languages are representative members of color categories},
+	journal = {Proceedings of the National Academy of Sciences},
+	volume = {113},
+	number = {40},
+	pages = {11178--11183},
+	year = {2016}
+}
+
+@inproceedings{tenenbaum01,
+	author = {J. B. Tenenbaum and T. L. Griffiths},
+	title = {The rational basis of representativeness},
+	booktitle = {Proceedings of the 23rd Annual Conference of the Cognitive Science Society},
+	year = {2001}
+}
+
+@inproceedings{abbott11,
+	author = {J. T. Abbott and K. A. Heller and Z. Ghahramani and T. L. Griffiths},
+	title = {Testing a {B}ayesian model of representativeness using a large image database},
+	booktitle = {Advances in Neural Information Processing Systems, 24},
+	year = {2011}
+}
+
+@inproceedings{rafferty10,
+	author = {A. N. Rafferty and T. L. Griffiths},
+	title = {Optimal language learning: The importance of starting representative},
+	booktitle = {Proceedings of the 32nd Annual Conference of the Cognitive Science Society},
+	year = {2010}
+}
 
 @incollection{griffithsscn07,
 	Address = {Oxford, England},
@@ -225,7 +255,15 @@
 	Title = {Categorization as nonparametric {B}ayesian density estimation},
 	Year = {2008}}
 
-
+@article{kahneman73,
+	author = {D. Kahneman and A. Tversky},
+	title = {On the psychology of prediction},
+	journal = {Psychological Review},
+	volume = {80},
+	number = {4},
+	year = {1973},
+	pages = {237--251}
+}
 @article{jern2013probabilistic,
   title={A probabilistic account of exemplar and category generation},
   author={Jern, Alan and Kemp, Charles},
