--- a/Manuscripts/cog-psych/revision/cogpsych.tex
+++ b/Manuscripts/cog-psych/revision/cogpsych.tex
@@ -93,13 +93,17 @@ The ability to creatively generate new concepts and ideas is among the most fasc
 \section{Introduction}
 \setlength\parindent{0.5in}
 
-Creating and learning new ideas is one of the most fascinating and important human capabilities. For example, cell phones and smart phones are newly created categories of objects that young and old adults learned and have become reliant on in the last few decades. In fact, computational reearchers have identified generating novel objects and objectives as one of the defining, and most difficult to formalize, characteristics of intelligent life \citep{lake2017,lehman2011,taylor2016}. Yet, the cognitive mechanisms that enable people to innovate and learn new innovations are not well understood and are understudied by scientists. In part, this is due to the inherent difficulty of designing and conducting experiments that test these capabilities. How would a scientist devise an experiment that induces a participant to create and learn new categories that are as interesting as cell phones and smart phones? In this article, we investigate the prior expectations people use to learn and generate new categories using computational models and behavioral experiments.
+Creating and learning new ideas is one of the most fascinating and important human capabilities. For example, cell phones and smart phones are newly created categories of objects that young and old adults learned and have become reliant on in the last few decades. In fact, computational researchers have identified generating novel objects and objectives as one of the defining, and most difficult to formalize, characteristics of intelligent life \citep{lake2017,lehman2011,taylor2016}. Yet, the cognitive mechanisms that enable people to innovate and learn new innovations are not well understood and are understudied by scientists. In part, this is due to the inherent difficulty of designing and conducting experiments that test these capabilities. How would a scientist devise an experiment that induces a participant to create and learn new categories that are as interesting as cell phones and smart phones? In this article, we use computational models and behavioral experiments to investigate the prior expectations people have when they learn and generate new categories.
 
-Generating and learning new concepts are, however, not altogether different from the types of behaviors typically studied in cognitive psychology laboratories. In particular, generating a member of a novel class can be considered a `special case' application of existing category knowledge \citep{kemp2014taxonomy,kurtz2015human}. Research in categorization typically focuses on what properties of a category affect the classification of an object's category given its features \citep{shepard1961learning,kurtz2013human}, and the prediction of an object's unobserved features given some of its other features and/or its category \citep{markman2003category}. The generation of members of a new category consists of inferring {\em all} features for a {\em novel} category label. Thus, we can make progress formalizing the processes involved in creative generation by extending theories of categorization to this special case. Then, we can examine what factors of the generated categories affect the ease at which people learn the category.
+Generating and learning new concepts are, however, not altogether different from the types of behaviors typically studied in cognitive psychology laboratories. In particular, generating a member of a novel class can be considered a `special case' application of existing category knowledge \citep{kemp2014taxonomy,kurtz2015human}. Research in categorization typically focuses on what properties of a category affect the classification of an object's category given its features \citep{shepard1961learning,kurtz2013human}, and the prediction of an object's unobserved features given some of its other features and/or its category \citep{markman2003category}. The generation of members of a new category consists of inferring {\em all} features for a {\em novel} category label. Thus, we can make progress formalizing the processes involved in category generation by extending theories of categorization to this case. Then, to ensure that these principles reflect basic principles of categorization and are not just specific to category generation, we can examine what factors of the generated categories affect the ease at which people learn the category.
 
 Previous work in category learning and generation has established that people are highly sensitive to the structural properties of categories, such as correlations between the features of category members and the relation between items within the same category and those in different categories \citep{roschmervis1975,regier2007,shepard1961learning,smith1995}. Inspired by this work, previous research on the topic of category generation has explored a similar principle: People tend to create new categories that have similar {\em statistical regularities} as previously learned categories \citep{jern2013probabilistic,ward1994structured}. Although this is an important characteristic of generating new categories, it cannot be the only one. Taken to the extreme, the best ``new'' category in terms of having the same statistical regularities to other categories would be identical to a known category that is representative of the domain (and thus, not new at all). 
 
-To successfully generate something novel, what is generated must be different from what is already known. This fundamental constraint, ``being different'', or contrasting from other categories in the relevant domain, is the focus of our work. Although implicitly assumed in some work, this constraint has been overlooked in previous research: To our knowledge, there has not been any systematic investigation addressing how generated categories {\em differ} from what is already known. Although the idea of category contrast is ubiquitous throughout the categorization literature, and extends to a variety of other fields \citep[e.g., color;][]{regier2007}, the idea that a new category should be ``different'' is vague, as there are many ways it could be different from a previously observed category. Building on the largely successful exemplar modeling framework \citep{medin1978context,nosofsky1984choice,nosofsky1986attention}, we propose a novel exemplar model of category generation, {\em Producing Alike and Contrasting Knowledge using Exemplar Representations} (PACKER), formalizing how new categories should differ from previous categories. This model makes novel predictions about how contrast affects category generation, which we test using behavioral experiments.
+To successfully generate something novel, what is generated must be different from what is already known. This fundamental constraint, ``being different'', or contrasting from other categories in the relevant domain, is the focus of our work. Although implicitly assumed in some work, this constraint has been overlooked in previous research: To our knowledge, there has not been any systematic investigation addressing how generated categories {\em differ} from what is already known. Although the idea of category contrast is ubiquitous throughout the categorization literature, and extends to a variety of other fields \citep[e.g., color;][]{regier2007}, the idea that a new category should be ``different'' is vague, as there are many ways it could be different from a previously observed category. 
+
+We examine two different definitions of how categories should differ from one another: exemplar contrast or representative of the alternative category. To formalize the first technique, we build on the largely successful exemplar modeling framework that \citep{medin1978context,nosofsky1984choice,nosofsky1986attention}. In doing so, we propose a novel exemplar model of category generation, {\em Producing Alike and Contrasting Knowledge using Exemplar Representations} (PACKER), formalizing how new categories should differ from previous categories. It embodies the exemplar contrast principle by incorporating a factor that repulses members of opposite categories from one another. To foreshadow, we find that this notion of contrast predicts human category learning performance, above and beyond other category learning models in a novel behavioral experiment. This demonstrates that contrast plays a central role in other important categorization tasks, which is not specific to category generation
+
+To formalize the hypothesis that people expect a new category to be representative of the opposite of the current category, or contrast as {\em representativeness} \citep{kahneman73}, we use the Bayesian formulation of representativeness \citep{tenenbaum01}, which has been used successfully to capture human performance in color categorization \citep{abbott16}, image category learning \citep{abbott11}, and language grammar learning \citep{rafferty10}. We do so by extending the state-of-the-art category generation model \citep{jern2013probabilistic} and find that  human category generation is best capture as generating representative, rather than probable, samples.
 
 The outline of the article is as follows. First we describe previous empirical work on the topic of category generation, as well as the computational formalizations of the theories in those reports. Then we describe our novel computational model, which is designed to generate categories that systematically differ from existing categories in the domain. We present two experiments demonstrating strong and systematic effects of category contrast on creative generation, and we qualitatively and quantitatively analyze the performance of each model in capturing human category generation. We conclude with a discussion of the implications of our results for categorization and creative cognition, and directions for future work.
 
